fix: 升级 Plugin 2.x & 性能优化